<resources>
    <string name="app_name">Image to PDF Converter</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open …</string>
    <string name="filename">Filename</string>
    <string name="conversion">Choose conversion type</string>
    <string name="conversion_type">Conversion type</string>
    <string name="choose_image_quality">Choose image quality</string>
    <string name="loading">Please wait…</string>
    <string name="rendering">Rendering pages</string>
    <string name="example">example</string>
    <string name="temp">temp</string>
    <string name="filenames">Image filename</string>
    <string name="convert">Convert</string>
    <string name="currently_loaded_file">Currently loaded file:\u0020</string>
    <string name="none">None</string>
    <string name="page_number">Page number</string>
    <string name="image_quality">Image quality</string>
    <string name="page_size">Page Size</string>
    <array name="pageSize">
        <item>Default</item>
        <item>A4</item>
        <item>Legal</item>
        <item>Letter</item>
    </array>
    <array name="imageQuality">
        <item>Low (Can be slow)</item>
        <item>High</item>
    </array>
</resources>
