<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="converter.dassem.com.fileconverter.MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_weight="6"
                    android:text="@string/currently_loaded_file"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/currentFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_weight="4"
                    android:text="@string/none"
                    android:textColor="#009688"
                    android:textSize="18sp" />
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/filename_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/filename"
                    android:inputType="textNoSuggestions"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/temp" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/imageQuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:hint="@string/image_quality"
                android:textColorHint="@color/colorAccent"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/pageSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:hint="@string/page_size"
                android:textColorHint="@color/colorAccent"
                app:met_floatingLabel="normal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="onClick"
                android:layout_marginTop="64dp"
                android:text="@string/convert"
                android:textColor="#fff"
                android:textSize="16sp"
                android:theme="@style/AppTheme.Button" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>

